# DBTTutorial

./: Load_csv_to_postgres.ipynb  README.md  pyproject.toml
bigquery_project/: README.md  dbt_project.yml
bigquery_project/models/: schema.yaml
bigquery_project/models/mart/: customer_order_history.sql  new_customers.sql  stg_customers.sql  stg_orders.sql
my_dbt_project/: dbt_project.yml
my_dbt_project/models/mart/: schema.yml  stg_orders.sql
my_dbt_project/models/staging/: load_customer_csv.sql
postgres_project/: README.md  dbt_project.yml
postgres_project/models/mart/: customer_orders.sql  customers_with_state.sql  schema.yaml  stg_customers.sql
postgres_project/models/staging/: postgres_warehouse_source.yml  stg_customers.sql  stg_states.sql
postgres_project/snapshots/: snapshot_customers.sql  snapshot_orders.sql
postgres_project/tests/: assert_customers_with_state_has_no_row_loss.sql
